--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>HTML CLASS</title>
 </head>
 <body>
+  <a href="new-feature2.html">click me</a>
+  <a href="new-feature-html">form page</a>
   <h1>Heading</h1>  
   <h2>heading</h2>
   <h3>heading</h3>
