--- a/new-feature2.html
+++ b/new-feature2.html
@@ -2,5 +2,9 @@
 <html>
     <head>
         <title>Another one again !</title>
+        <body>
+            <a href="new-feature2.html">click me</a>
+            <a href="new-feature-html">form page</a>
+        </body>
     </head>
 </html>
