--- a/new-feature2.html
+++ b/new-feature2.html
@@ -5,6 +5,58 @@
         <body>
             <a href="new-feature2.html">click me</a>
             <a href="new-feature-html">form page</a>
+
+            <p>skiittles</p>
+            <p>extrovert</p>
+            <p>paid</p>
+            <p>paris</p>
+
+
+
+            <ol>
+                <li>orange</li>
+                <li>mango</li>
+                <li>cashew</li>
+                <li>pawpaw</li>
+            </ol>
+
+<ul>
+    <li>rice</li>
+    <li>beans</li>
+    <li>meat</li>
+    <li>potato</li>
+</ul>
+
+<dl>
+    <dt>What is your name</dt>
+    <dd>My name is skittles</dd>
+    <dt>how to walk</dt>
+    <dd>we walk with our leg</dd>
+</dl>
+
+<ul>
+   <li>CARS
+    <ol>
+        <li>toyota</li>
+        <li>hyundai</li>
+        <li>benz</li>
+        <li>acura</li>
+    </ol>
+   </li>
+    </ol>
+   <li>SCHOOLS
+    <ol>
+        <li>Kwasu</li>
+        <li>Oau</li>
+        <li>Lautech</li>
+        <li>Ui</li>
+    </ol>
+   </li>
+</ul>
+
+<img src="zoho.jpg" alt="this is web page" width="400" height="310">
+<img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7" alt="image link">
+
         </body>
     </head>
 </html>
