--- a/school-subjects.html
+++ b/school-subjects.html
@@ -7,7 +7,9 @@
     <a href="school-subjects.html">click me</a>
     <a href="table.html">form page</a>
     <a href="richest.html">table</a>
-    
+    <a href="dog.html">dog</a>
+    <a href="new-feature-html">feature 1</a>
+    <a href="new-feature2.html">feature 32</a>
     <table border="1" cellspacing="0" cellpadding="13">
         <thead>
             <tr>
