--- a/new-feature2.html
+++ b/new-feature2.html
@@ -3,8 +3,14 @@
     <head>
         <title>Another one again !</title>
         <body>
-            <a href="new-feature2.html">click me</a>
-            <a href="new-feature-html">form page</a>
+            <a href="school-subjects.html">click me</a>
+            <a href="table.html">form page</a>
+            <a href="richest.html">table</a>
+            <a href="dog.html">dog</a>
+            <a href="new-feature-html">feature 1</a>
+            <a href="new-feature2.html">feature 32</a>\
+            <a href="index.html"> index</a>
+            <a href="zoho.jpg">picture</a>
 
             <p>skiittles</p>
             <p>extrovert</p>
