--- a/school-subjects.html
+++ b/school-subjects.html
@@ -9,7 +9,9 @@
     <a href="richest.html">table</a>
     <a href="dog.html">dog</a>
     <a href="new-feature-html">feature 1</a>
-    <a href="new-feature2.html">feature 32</a>
+    <a href="new-feature2.html">feature 32</a>\
+    <a href="index.html"> index</a>
+    <a href="zoho.jpg">picture</a>
     <table border="1" cellspacing="0" cellpadding="13">
         <thead>
             <tr>
