--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <title>HTML CLASS</title>
 </head>
 <body>
-  <a href="new-feature2.html">click me</a>
-  <a href="new-feature-html">form page</a>
+  <a href="school-subjects.html">click me</a>
+  <a href="table.html">form page</a>
+  <a href="richest.html">table</a>
+  <a href="dog.html">dog</a>
+  <a href="new-feature-html">feature 1</a>
+  <a href="new-feature2.html">feature 32</a>\
+  <a href="index.html"> index</a>
+  <a href="zoho.jpg">picture</a>
   <h1>Heading</h1>  
   <h2>heading</h2>
   <h3>heading</h3>
