--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <a href="new-feature-html">feature 1</a>
   <a href="new-feature2.html">feature 32</a>\
   <a href="index.html"> index</a>
-  <a href="zoho.jpg">picture</a>
+  <a href="form.html">form 1</a>
+  <a href="form-classwork.html">form 2</a>
+
+
   <h1>Heading</h1>  
   <h2>heading</h2>
   <h3>heading</h3>
