--- a/new-feature2.html
+++ b/new-feature2.html
@@ -10,8 +10,9 @@
             <a href="new-feature-html">feature 1</a>
             <a href="new-feature2.html">feature 32</a>\
             <a href="index.html"> index</a>
-            <a href="zoho.jpg">picture</a>
-
+            <a href="form.html">form 1</a>
+            <a href="form-classwork.html">form 2</a>
+        
             <p>skiittles</p>
             <p>extrovert</p>
             <p>paid</p>
