--- a/new-feature2.html
+++ b/new-feature2.html
@@ -12,6 +12,8 @@
             <a href="index.html"> index</a>
             <a href="form.html">form 1</a>
             <a href="form-classwork.html">form 2</a>
+            <a href="novel-form.html">novell form</a>
+            <a href="Course-table.html"></a>
         
             <p>skiittles</p>
             <p>extrovert</p>
