--- a/table.html
+++ b/table.html
@@ -13,6 +13,8 @@
         <a href="index.html"> index</a>
         <a href="form.html">form 1</a>
         <a href="form-classwork.html">form 2</a>
+        <a href="novel-form.html">novell form</a>
+        <a href="Course-table.html"></a>
     
 
         <table border="1" cellspacing="0" cellpadding="12">
