--- a/form.html
+++ b/form.html
@@ -7,14 +7,16 @@
 </head>
 <body>
     <a href="school-subjects.html">click me</a>
-        <a href="table.html">form page</a>
-        <a href="richest.html">table</a>
-        <a href="dog.html">dog</a>
-        <a href="new-feature-html">feature 1</a>
-        <a href="new-feature2.html">feature 32</a>\
-        <a href="index.html"> index</a>
-        <a href="form.html">form 1</a>
-        <a href="form-classwork.html">form 2</a>
+            <a href="table.html">form page</a>
+            <a href="richest.html">table</a>
+            <a href="dog.html">dog</a>
+            <a href="new-feature-html">feature 1</a>
+            <a href="new-feature2.html">feature 32</a>\
+            <a href="index.html"> index</a>
+            <a href="form.html">form 1</a>
+            <a href="form-classwork.html">form 2</a>
+            <a href="novel-form.html">novell form</a>
+            <a href="Course-table.html"></a>
     
 
 
