--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <a href="index.html"> index</a>
   <a href="form.html">form 1</a>
   <a href="form-classwork.html">form 2</a>
-
+  <a href="novel-form.html">novell form</a>
+  <a href="Course-table.html"></a>
 
   <h1>Heading</h1>  
   <h2>heading</h2>
